--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <div class="banner">
         <div class="container d-flex ai-center">
-            <img src="/img/people.png" alt="" />
+            <img src="img/people.png" alt="" />
             <div class="banner-content">
                 <h1 class="h2">
                     Hi<br/>
