--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
             <div class="introduction-content">
                 <h2 class="h2 mb-34">Introduction</h2>
                 <p class="mb-34 fs-2">Hi, I'm William Lee, a Front-End Developer with a passion for building beautiful and responsive websites that provide an optimal user experience.</p>
-                <img src="/img/sparkle-sm.png" alt="">
-                <img src="/img/sparkle-sm.png" alt="">
-                <img src="/img/sparkle-sm.png" alt="">
+                <img src="img/sparkle-sm.png" alt="">
+                <img src="img/sparkle-sm.png" alt="">
+                <img src="img/sparkle-sm.png" alt="">
             </div>
             <ul class="d-flex">
-                <li class="mr-6"><img src="/img/sparkle.png" alt=""></li>
-                <li class="mr-6"><img src="/img/photographer.png" alt=""></li>
-                <li class="mr-6"><img src="/img/people-2.png" alt=""></li>
+                <li class="mr-6"><img src="img/sparkle.png" alt=""></li>
+                <li class="mr-6"><img src="img/photographer.png" alt=""></li>
+                <li class="mr-6"><img src="img/people-2.png" alt=""></li>
             </ul>
         </div>
     </div>
@@ -78,17 +78,17 @@
         <div class="container d-flex justify-content-around ai-center">
             <div class="contactSign d-flex">
                 <h2 class="contactMe h2">CONTACT ME</h2>
-                <img src="/img/trending_flat_black_24dp 1.png" alt="">
+                <img src="img/trending_flat_black_24dp 1.png" alt="">
             </div>
             <ul class="socialMedia d-flex">
                 <li><a href="#" class="discord">
-                    <img src="/img/discord.png" alt="">
+                    <img src="img/discord.png" alt="">
                 </a></li>
                 <li><a href="#" class="instagram">
-                    <img src="/img/instagram.png" alt="">
+                    <img src="img/instagram.png" alt="">
                 </a></li>
                 <li><a href="#" class="message">
-                    <img src="/img/message.png" alt="">
+                    <img src="img/message.png" alt="">
                 </a></li>
             </ul>    
         </div>
@@ -97,18 +97,18 @@
         <div class="container">
             <h2 class="h2 projectTitle">My Projects</h2>
             <div class="d-flex">
-                <img class="mr-6" src="/img/Rectangle 10.png" alt="" />
+                <img class="mr-6" src="img/Rectangle 10.png" alt="" />
                 <div>
                     <div class="d-flex mb-28">
-                        <img class="mr-6" src="/img/Rectangle 15.png" alt="" />
+                        <img class="mr-6" src="img/Rectangle 15.png" alt="" />
                         <div class="d-flex flex-column justify-content-between ai-start">
                             <p>I've worked on a variety of websites, including e-commerce sites, blogs, and landing pages. I take pride in creating clean, efficient, and user-friendly code.</p>
                             <a href="#" class="btn btn-black">SEE MORE<img src="/img/arrow_outward-white.png" alt="" /></a>
                         </div>
                     </div>
                     <div class="d-flex">
-                        <img class="mr-6" src="/img/Rectangle 14.png" alt="" />
-                        <img src="/img/Rectangle 29.png" alt="" />
+                        <img class="mr-6" src="img/Rectangle 14.png" alt="" />
+                        <img src="img/Rectangle 29.png" alt="" />
                     </div>
                 </div>
             </div>
